--- a/index.html
+++ b/index.html
@@ -11,8 +11,53 @@
     <link rel="stylesheet" href="music.css">
     <link rel="icon" href="im/tp.jpg">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+      #loader {
+          border: 12px solid #f3f3f3;
+          border-radius: 50%;
+          border-top: 12px solid #444444;
+          width: 70px;
+          height: 70px;
+          animation: spin 1s linear infinite;
+      }
+        
+      @keyframes spin {
+          100% {
+              transform: rotate(360deg);
+          }
+      }
+        
+      .center {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+      }
+  </style>
 </head>
 <body>
+  <!-- load   --> 
+  <div id="loader" class="center"></div>
+  
+    <script>
+        document.onreadystatechange = function() {
+            if (document.readyState !== "complete") {
+                document.querySelector(
+                  "body").style.visibility = "hidden";
+                document.querySelector(
+                  "#loader").style.visibility = "visible";
+            } else {
+                document.querySelector(
+                  "#loader").style.display = "none";
+                document.querySelector(
+                  "body").style.visibility = "visible";
+            }
+        };
+    </script>
+  <!-- load   --> 
+
   <!-- navbar  -->
   <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
