--- a/about.html
+++ b/about.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Truly Podcast</title>
+    <link rel="stylesheet" href="loader.css">
     <link rel="icon" href="im/tp.jpg">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <meta name="description" content="Welcome to About Us page of Truly Podcast | Truly Podcast is a indian podcast platform with no ads.">
 </head>
 <body>
+  <!-- loader  -->
+  <div id="loader" class="center"></div>
+ 
+    <script>
+        document.onreadystatechange = function() {
+            if (document.readyState !== "complete") {
+                document.querySelector(
+                  "body").style.visibility = "hidden";
+                document.querySelector(
+                  "#loader").style.visibility = "visible";
+            } else {
+                document.querySelector(
+                  "#loader").style.display = "none";
+                document.querySelector(
+                  "body").style.visibility = "visible";
+            }
+        };
+    </script>
+  <!-- loader  -->
      <!-- navbar  -->
   <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
