--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="im/tp.jpg">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <meta name="description" content="Welcome to About Us page of Truly Podcast | Truly Podcast is a indian podcast platform with no ads.">
+    <meta name="keywords" content="Welcome to About Us page of Truly Podcast | Truly Podcast is a indian podcast platform with no ads.">
 </head>
 <body>
   <!-- loader  -->
