--- a/cp.html
+++ b/cp.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="loader.css">
     <link rel="icon" href="im/c.jpg">
     <meta name="description" content="Welcome to The Copyright Page of Truly Podcast | In this page We defined all Copyright  Rules and Regulations.">
+    <meta name="keywords" content="Welcome to The Copyright Page of Truly Podcast | In this page We defined all Copyright  Rules and Regulations.">
 </head>
 <body>
   <!-- loader  -->
