--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truly Podcast - Listen - Music | Podcast | Audio.</title>
     <meta name="description" content="Truly Podcast - Listen Podcast | Music | Audio in a Simple and Ad Free Experience | Truly Podcast is Indian and Totally Free.">
+    <meta name="keywords" content="Truly Podcast - Listen Podcast | Music | Audio in a Simple and Ad Free Experience | Truly Podcast is Indian and Totally Free.">
+    
     <script src="https://kit.fontawesome.com/a2b3da0c65.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="music.css">
