--- a/library.html
+++ b/library.html
@@ -13,6 +13,7 @@
 	<script src="https://kit.fontawesome.com/a2b3da0c65.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="loader.css">
+	<meta name="keywords" content="Welcome to Audio Library of Truly Podcast | Here you will find Podcast, Music, Audio | Truly Podcast is a indian Podcast Platform.">
 
     <title>Library - Truly Podcast [ Music | Podcast | Audio ]</title>
 	<meta name="description" content="Welcome to Audio Library of Truly Podcast | Here you will find Podcast, Music, Audio | Truly Podcast is a indian Podcast Platform.">
