--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@ src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <!-- Appy Chatbot widget, Paste the code in the <body> section -->
   <script id="appyWidgetInit" src="https://chatbot.appypie.com/widget/loadbuild.js?cid=klafzioi-AGENT1613627224147-BOTID1619070636526&name=mixBuild"></script>
   <!-- /. End Appy chatbot widget code -->
-  
+ <h1> Do not click</h1>
+  <!-- ad  -->
+  <script type="text/javascript" src="https://adzly.com/adserve/getadzly.php?awid=12932"></script>
+<noscript><a href="https://adzly.com/r/85436">Put your ad here for free! - adzly.com</a></noscript>
+
+  <!-- ad  -->
+
 </body>
 </html>
